--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
     rev: 3.9.2
     hooks:
     -   id: flake8
-        args: ['--ignore=E501']
+        args: ['--ignore=E501,W503']
         language_version: python3
 
 -   repo: https://github.com/asottile/reorder_python_imports
