added scipy and other requirements for tox and pre commit hooks

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,9 @@ name = linguistic_tests
 packages = linguistic_tests
 install_requires =
     transformers
+    pandas
+    torch
+    scipy
 python_requires = >=3.9
 package_dir =
     =src
