fixed: added pytorch_pretrained_bert to project install requirements (was failing test on new environments).

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,7 @@ name = linguistic_tests
 packages = linguistic_tests
 install_requires =
     transformers
+    pytorch_pretrained_bert
     pandas
     torch
     scipy
