- added sentencepiece (required by CamembertTokenizer) to requirement to fix tox fail in new environment

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,10 +5,11 @@ name = linguistic_tests
 packages = linguistic_tests
 install_requires =
     transformers
-    pandas
     torch
     scipy
+    pandas
     cython
+    sentencepiece
 python_requires = >=3.9
 package_dir =
     =src
