added comment on tox.ini reminding that every time the requirements lists are changed, tox -r must be called locally to make new envs.

--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ python =
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
+#  NB: locally, tox -r must be called manually every time the deps files change
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/requirements_dev.txt
