pytest config: ignore more dirs when collecting tests, to speed up test run

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,24 @@ norecursedirs = [
     "src/linguistic_tests/generation_projects/*",
     "src/linguistic_tests/generation_projects/blimp/*",
     "src/linguistic_tests/utils/*",
+    ".benchmarks",
+    ".git",
+    ".github",
+    ".idea",
+    ".mypy_cache",
+    ".pytest_cache",
+    ".tox",
+    "__pycache__",
+    "logs",
+    "models",
+    "outputs",
+    "src",
+    "vocabulary",
+    "int_tests/.benchmarks",
+    "int_tests/htmlcov",
+    "unit_tests/.benchmarks",
+    "unit_tests/coverage_html_report",
+    "unit_tests/htmlcov",
 ]
 
 [tool.coverage.run]
