fixed: added pytest-socket to requirements to enable new option in pytest config

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ testing =
     mypy>=0.910
     flake8>=3.9
     tox>=3.24
-
+    pytest-socket==0.5.1
 [options.package_data]
 linguistic_tests = py.typed
 
