- "absolute imports in legacy code" - black auto code formatting - updated flake8 config (setup.cfg) to exclude more directories - updated flake8 config also in pre commit hooks

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,4 +29,7 @@ linguistic_tests = py.typed
 
 [flake8]
 max-line-lenght = 160
-exclude = linguistic_tests/generation_projects
+exclude =
+    src/linguistic_tests/utils,
+    src/linguistic_tests/generation_projects/blimp,
+    src/linguistic_tests/generation_projects
