--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ addopts = [
     "--cov-report=term",
     "--cov-report=html",
     "--disable-socket",
+    "--durations=5",
 ]
 testpaths = [
     "unit_tests",
