- moving relevant methods to run_tests module - skipping (todo) integration test on loading roberta model - updated packages setting in setup.cfg for subpackage, was failing tests with tox - todo: code coverage now includes the utils subpackage, despite being in the omit section of the toml file

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,9 @@
 name = linguistic_tests
 
 [options]
-packages = linguistic_tests
+packages =
+    linguistic_tests
+    linguistic_tests.utils
 install_requires =
     transformers
     torch
