- partially fixed: path of directories in omit option for pytest-cov - fixed: pytest coverage omit working also when run from tox and the paths are different - fixme: duplicate modules when running pytest inside or outside of tox depending if coverage.run -source option is specified, and coverage perc is reduced - fixme: from tox, path of covered files now starts with root in .tox\ rather than project root - fixme: redundant/repeated (which is rightworks?) omit paths for pytest coverage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,10 +40,20 @@ norecursedirs = [
 ]
 
 [tool.coverage.run]
+-source = [
+    "linguistic_tests",
+]
+
 omit = [
     "src/linguistic_tests/generation_projects/*",
     "src/linguistic_tests/generation_projects/blimp/*",
     "src/linguistic_tests/utils/*",
+    "src/linguistic_tests/utils",
+    "linguistic_tests/utils/*",
+    "linguistic_tests/utils",
+    "utils/*",
+    "utils",
+    "*/linguistic_tests/utils/*",
 ]
 
 [tool.coverage.report]
@@ -51,6 +61,12 @@ omit = [
     "src/linguistic_tests/generation_projects/*",
     "src/linguistic_tests/generation_projects/blimp/*",
     "src/linguistic_tests/utils/*",
+    "src/linguistic_tests/utils",
+    "linguistic_tests/utils/*",
+    "linguistic_tests/utils",
+    "utils/*",
+    "utils",
+    "*/linguistic_tests/utils/*",
 ]
 
 [tool.coverage.html]
