fixed: code coverage perc now is correct fixed: duplicate files listed in code coverage report fixme/todo: still readundant (repeated) paths in omit options for code coverage in toml file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ norecursedirs = [
     "src/linguistic_tests/generation_projects/*",
     "src/linguistic_tests/generation_projects/blimp/*",
     "src/linguistic_tests/utils/*",
+    "*/linguistic_tests/generation_projects/*",
+    "*/linguistic_tests/generation_projects/blimp/*",
+    "*/linguistic_tests/utils/*",
     ".benchmarks",
     ".git",
     ".github",
@@ -54,6 +57,7 @@ omit = [
     "utils/*",
     "utils",
     "*/linguistic_tests/utils/*",
+    "*/site-packages/linguistic_tests/*",
 ]
 
 [tool.coverage.report]
@@ -67,6 +71,7 @@ omit = [
     "utils/*",
     "utils",
     "*/linguistic_tests/utils/*",
+    "*/site-packages/linguistic_tests/*",
 ]
 
 [tool.coverage.html]
