--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.pytest.ini_options]
 addopts = [
-    "--cov=linguistic_tests",
+    "--cov=src.linguistic_tests",
     "--cov-report=term",
     "--cov-report=html",
     "--disable-socket",
