--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 transformers==4.18.0
 torch>=1.10
 scipy>=1.5
-pandas==1.1
+pandas>=1.1
 cython==0.29.30
 sentencepiece==0.1.96
-matplotlib==3.3
+matplotlib>=3.3
 tqdm
 types-dataclasses
