--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.8.0
-envlist = py36
+envlist = py39, py36
           # py39, py36, py37, py38, flake8, mypy
 isolated_build = true
 
