--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/requirements_dev.txt
 commands =
-    pytest --basetemp={envtmpdir}
+    pytest --basetemp={envtmpdir} {posargs}
 
 [testenv:flake8]
 basepython = python3.9
